Update AnvilMenuMixin.java